# git-sherlock

./: .gitignore  flake.nix  pyproject.toml
git_sherlock/: __init__.py  colors.py  screen.py  ui.py  utils.py
src/git-sherlock/: __main__.py  colors.py  screen.py  ui.py  utils.py
