[build-system]
requires = ["setuptools ~= 75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "git-sherlock"
version = "0.1.0"
description = "An extensible git inspector"
authors = [
    { name = "Keyboard Slayer", email = "jordan@dalcq.eu" },
]
# readme = "README.md"
requires-python = ">=3.12"
license = { text = "GPL3" }

[project.scripts]
sherlock = "git_sherlock:main"

[tool.setuptools]
packages = ["git_sherlock"]
